--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,21 +1,7 @@
-.page-header {
-    background-color: #FF9400;
-    margin-top: 0;
-    padding: 20px 20px 20px 40px;
-}
-
-.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
+.mds-layout-title, .mds-layout-title a, .mds-layout-title a:visited, .mds-layout-title a:active {
     color: #FFFFFF;
-    font-size: 35pt;
+    /*font-size: 24px;*/
     text-decoration: none;
-}
-
-.content {
-    margin-left: 40px;
-}
-
-h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
 }
 
 .date {
@@ -31,17 +17,38 @@ h1, h2, h3, h4 {
     width: 100%;
 }
 
-.top-menu, .top-menu:hover, .top-menu:visited {
-    color: #FFFFFF;
-    float: right;
-    font-size: 26pt;
-    margin-right: 20px;
+.post-title {
+    text-decoration: none;
 }
 
 .post {
-    margin-bottom: 70px;
+    margin-bottom: 15px;
 }
 
-.post h1 a, .post h1 a:visited {
-    color: #000000;
+.posts {
+    margin: auto;
+}
+
+.width100 {
+    width: 100%;
+}
+
+.material-icons.md-18 {
+    font-size: 18px;
+}
+
+.material-icons.md-24 {
+    font-size: 24px;
+}
+
+.material-icons.md-36 {
+    font-size: 36px;
+}
+
+.material-icons.md-48 {
+    font-size: 48px;
+}
+
+.material-icons.md-light {
+    color: rgba(255, 255, 255, 1);
 }
