--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,10 +9,10 @@
                 <a class="btn btn-default" href="{% url 'blog.views.post_publish' pk=post.pk %}">Publish</a>
             {% endif %}
             <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">
-                <span class="glyphicon glyphicon-pencil"></span>
+                <span class="glyphicon glyphicon-pencil">edit</span>
             </a>
             <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}">
-                <span class="glyphicon glyphicon-remove"></span>
+                <span class="glyphicon glyphicon-remove">remove</span>
             </a>
         </div>
         <h1>{{ post.title }}</h1>
