--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,12 +2,20 @@
 
 {% block content %}
     {% for post in posts %}
-    <div class="post">
-        <div class="date">
-            {{ post.published_date }}
+    <div class="demo-card-wide mdl-card mdl-shadow--2dp width100 post">
+        <div class="mdl-card__title">
+            <h2><a class="post-title" href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
         </div>
-        <h1><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaks }}</p>
+
+        <div class="mdl-card__supporting-text">
+            <p>{{ post.text | linebreaks }}</p>
+        </div>
+
+        <div class="mdl-card__menu">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+        </div>
     </div>
     {% endfor %}
 {% endblock content %}
