--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,10 +1,30 @@
 {% extends "blog/base.html" %}
 
 {% block content %}
-    <h1>New post</h1>
-    <form method="POST" class="post-form">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" title="New post" class="save btn btn-default">Salvar</button>
-    </form>
+    <div class="demo-card-wide mdl-card mdl-shadow--2dp width100 post">
+        <div class="mdl-card__title">
+            <h1 class="mdl-card__title-text">New post</h1>
+        </div>
+
+        <form method="POST" class="post-form">
+            <div class="mdl-card__supporting-text">
+                {% csrf_token %}
+                <!-- {{ form.as_p }} -->
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label width100">
+                    <label for="id_title" class="mdl-textfield__label">Title</label>
+                    {{ form.title }}
+                </div>
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label width100">
+                    <label for="id_text" class="mdl-textfield__label">Text</label>
+                    {{ form.text }}
+                </div>
+            </div>
+            <div class="mdl-card__actions">
+                <button type="submit" title="New post" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect save btn btn-default">
+                    Salvar
+                </button>
+            </div>
+        </form>
+
+    </div>
 {% endblock content %}
