--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -57,6 +57,15 @@
   width: 100%;
 }
 
+.errorList {
+  margin: 0;
+  padding-left: 20px;
+}
+
+.mdl-textfield__error {
+  visibility: visible;
+}
+
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-24 { font-size: 24px; }
 .material-icons.md-36 { font-size: 36px; }
