--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -9,11 +9,19 @@
         <form method="POST" class="post-form">
             <div class="mdl-card__supporting-text">
                 {% csrf_token %}
-                <!-- {{ form.as_p }} -->
                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label width100">
                     <label for="id_title" class="mdl-textfield__label">Title</label>
-                    {{ form.title }}
+                    {{ form.title | add_class: "mdl-textfield__input" }}
+
+                    {% if form.title.errors %}
+                        {% for error in form.title.errors %}
+                        <p><span class="mdl-textfield__error">{{ error|escape }}</span></p>
+                        <p><span class="mdl-textfield__error">{{ error|escape }}</span></p>
+                        {% endfor %}
+                    {% endif %}
                 </div>
+                <!-- {{ form.title.errors }} -->
+
                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label width100">
                     <label for="id_text" class="mdl-textfield__label">Text</label>
                     {{ form.text }}
