--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,9 +1,11 @@
 {% extends "blog/base.html" %}
 
+{% load material_form %}
+
 {% block content %}
     <h1>New post</h1>
     <form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
+        {% form form=form %}{% endform %}
         <button type="submit" title="New post" class="save btn btn-default">Salvar</button>
     </form>
 {% endblock content %}
