Navbar links with icons

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -22,13 +22,13 @@
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
                         <li>
                             <a href="{% url 'blog.views.post_new' %}" class="top-menu">
-                                <i class="material-icons">add</i>
+                                <i class="material-icons left">add</i>
                                 <span>New Post</span>
                             </a>
                         </li>
                         <li>
                             <a href="{% url 'post_draft_list' %}" class="top-menu">
-                                <i class="material-icons">mode_edit</i>
+                                <i class="material-icons left">mode_edit</i>
                                 <span>Edit Drafts</span>
                             </a>
                         </li>
