--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -12,21 +12,23 @@
 
 .content {
   margin-left: 40px;
+}*/
+
+h1 {
+  color: #ffab40 !important;
 }
 
-h1, h2, h3, h4 {
-  font-family: 'Lobster', cursive;
+.post-title {
+  margin: 0 0 15px 0;
 }
 
 .date {
   float: right;
   color: #828282;
+  font-size: small;
 }
 
-.save {
-  float: right;
-}
-
+/*
 .post-form textarea, .post-form input {
   width: 100%;
 }
