--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -2,10 +2,18 @@
 
 {% block content %}
     {% for post in posts %}
-        <div class="post">
-            <p class="date">created: {{ post.created_date|date:'d-m-Y' }}</p>
-            <h1><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-            <p>{{ post.text|truncatechars:200 }}</p>
+        <div class="card">
+            <div class="card-content">
+                <div class="card-title">
+                    <div class="right date">
+                        created: {{ post.created_date|date:'d-m-Y' }}
+                    </div>
+                    <a href="{% url 'blog.views.post_detail' pk=post.pk %}">
+                        <h1 class="post-title">{{ post.title | linebreaks }}</h1>
+                    </a>
+                </div>
+                <p>{{ post.text | truncatechars:200 }}</p>
+            </div>
         </div>
     {% endfor %}
 {% endblock content %}
