--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,12 +2,18 @@
 
 {% block content %}
     {% for post in posts %}
-    <div class="post">
-        <div class="date">
-            {{ post.published_date }}
+    <div class="card">
+        <div class="card-content">
+            <div class="card-title">
+                <div class="right date">
+                    {{ post.published_date }}
+                </div>
+                <a href="{% url 'blog.views.post_detail' pk=post.pk %}">
+                    <h1 class="post-title">{{ post.title | linebreaks }}</h1>
+                </a>
+            </div>
+            <p>{{ post.text | linebreaks }}</p>
         </div>
-        <h1><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaks }}</p>
     </div>
     {% endfor %}
 {% endblock content %}
