--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,25 +1,48 @@
-/*.page-header {
-  background-color: #FF9400;
-  margin-top: 0;
-  padding: 20px 20px 20px 40px;
+.btn-floating,
+.btn-floating:hover {
+  background-color: #66bb6a;
 }
 
-.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-  color: #FFFFFF;
-  font-size: 35pt;
-  text-decoration: none;
+.btn-flat {
+  color: #ff6d00 !important;
 }
 
-.content {
-  margin-left: 40px;
+.btn-flat:focus,
+.btn-flat:active {
+  background-color: transparent;
+}
+
+.btn-flat:hover {
+  background-color: #eee;
+  color: #ff6d00 !important;
+}
+
+.comment-header {
+  margin: 20px 0px 20px 0px;
+}
+
+.comment {
+  border-left-color: #a5d6a7;
+}
+
+a {
+  color: #ff6d00;
+}
+
+.post-text {
+  padding-bottom: 20px;
+}
+
+/*label.active,
+input:focus {
+  color: #ffab40 !important;
+  border-bottom-color: #ffab40 !important;
+  box-shadow: #ffab40 !important;
 }*/
 
-h1 {
-  color: #ffab40 !important;
-}
-
 .post-title {
-  margin: 0 0 15px 0;
+  /*margin: 0 0 15px 0;*/
+  color: #ff9100;
 }
 
 .date {
@@ -28,22 +51,46 @@ h1 {
   font-size: small;
 }
 
-/*
-.post-form textarea, .post-form input {
-  width: 100%;
+.date .btn-floating {
+  margin-left: 5px;
 }
 
-.top-menu, .top-menu:hover, .top-menu:visited {
-  color: #FFFFFF;
-  float: right;
-  font-size: 26pt;
-  margin-right: 20px;
+nav {
+  /*height: 60px;*/
 }
 
-.post {
-  margin-bottom: 70px;
+/* label color */
+.input-field label {
+ /*color: #000;*/
 }
-
-.post h1 a, .post h1 a:visited {
-  color: #000000;
-}*/
+/* label focus color */
+.input-field input[type=text]:focus + label,
+.input-field input[type=password]:focus + label,
+.input-field textarea.materialize-textarea:focus + label {
+ color: #ff9100;
+}
+/* label underline focus color */
+.input-field input[type=text]:focus,
+.input-field input[type=password]:focus,
+.input-field textarea.materialize-textarea:focus {
+ border-bottom: 1px solid #ff9100;
+ box-shadow: 0 1px 0 0 #ff9100;
+}
+/* valid color */
+.input-field input[type=text].valid,
+.input-field input[type=password].valid,
+.input-field textarea.materialize-textarea.valid {
+ border-bottom: 1px solid #607d8b;
+ box-shadow: 0 1px 0 0 #607d8b;
+}
+/* invalid color */
+.input-field input[type=text].invalid,
+.input-field input[type=password].invalid,
+.input-field textarea.materialize-textarea.invalid {
+ border-bottom: 1px solid #f44336;
+ box-shadow: 0 1px 0 0 #f44336;
+}
+/* icon prefix focus color */
+.input-field .prefix.active {
+ color: #4caf50;
+}
