--- a/blog/templates/blog/add_comment_to_post.html
+++ b/blog/templates/blog/add_comment_to_post.html
@@ -1,4 +1,4 @@
-{% extends "blog/base.html" %}
+{% extends 'blog/base.html' %}
 
 {% load material_form %}
 
@@ -6,15 +6,15 @@
     <div class="card posts">
         <form method="POST" class="post-form">{% csrf_token %}
             <div class="card-content">
-                <div class="card-title"><h2 class="form-title">{{ operation }} Post<h2></div>
+                <div class="card-title"><h2 class="form-title">New Comment<h2></div>
                 {% form form=form %}{% endform %}
             </div>
 
             <div class="card-action">
                 <div class="right-align">
-                    <button type="submit" title="New post" class="btn-flat pull-right">Salvar</button>
+                    <button type="submit" title="New post" class="btn-flat pull-right">Send</button>
                 </div>
             </div>
         </form>
     </div>
-{% endblock content %}
+{% endblock %}
