--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -2,14 +2,14 @@
 
 {% block content %}
     {% for post in posts %}
-        <div class="card">
+        <div class="card hoverable">
             <div class="card-content">
                 <div class="card-title">
                     <div class="right date">
-                        created: {{ post.created_date|date:'d-m-Y' }}
+                        Created: {{ post.created_date|date:'d-m-Y' }}
                     </div>
                     <a href="{% url 'blog.views.post_detail' pk=post.pk %}">
-                        <h1 class="post-title">{{ post.title | linebreaks }}</h1>
+                        <h2 class="post-title">{{ post.title | linebreaks }}</h2>
                     </a>
                 </div>
                 <p>{{ post.text | truncatechars:200 }}</p>
