--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,17 +2,20 @@
 
 {% block content %}
     {% for post in posts %}
-    <div class="card">
+    <div class="card hoverable">
         <div class="card-content">
             <div class="card-title">
                 <div class="right date">
                     {{ post.published_date }}
                 </div>
                 <a href="{% url 'blog.views.post_detail' pk=post.pk %}">
-                    <h1 class="post-title">{{ post.title | linebreaks }}</h1>
+                    <h2 class="post-title">{{ post.title | linebreaks }}</h2>
                 </a>
             </div>
-            <p>{{ post.text | linebreaks }}</p>
+            <div class="post-text">
+                <p>{{ post.text | linebreaks }}</p>
+            </div>
+            <a href="{% url 'blog.views.post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>
         </div>
     </div>
     {% endfor %}
