--- a/blog/templates/blog/add_comment_to_post.html
+++ b/blog/templates/blog/add_comment_to_post.html
@@ -12,7 +12,7 @@
 
             <div class="card-action">
                 <div class="right-align">
-                    <button type="submit" title="New post" class="btn-flat pull-right">Send</button>
+                    <button type="submit" title="New post" class="btn-flat pull-right">Enviar</button>
                 </div>
             </div>
         </form>
